--- a/src/main/resources/templates/solution/index.html
+++ b/src/main/resources/templates/solution/index.html
@@ -83,10 +83,10 @@
          <div class="container">
             <div class="tt-layout-404">
                <span class="tt-icon">
-               <img th:src="@{images/single-topic-img01.jpg}"/>
+               <img th:src="@{images/single-topic-img01.jpg}" src="/images/single-topic-img01.jpg"/>
                </span>
                <h6 class="tt-title">방문을 환영합니다.</h6>
-               <p>어렵고 힘든 문제가 있으신가요?222<br>
+               <p>어렵고 힘든 문제가 있으신가요?<br>
                   <a href="index.html" class="tt-color-dark tt-underline-02">문제등록</a>을 통해 고수님들의 도움을 받아보세요.
                </p>
             </div>
