--- a/src/main/resources/templates/solution/list.html
+++ b/src/main/resources/templates/solution/list.html
@@ -73,14 +73,14 @@
         <div class="tt-tab-wrapper" style="cursor:pointer;">
             <div class="tt-wrapper-inner">
                 <ul class="nav nav-tabs pt-tabs-default" role="tablist">
-                    <li class="nav-item show">
-                        <a class="nav-link active" data-toggle="tab" href="/solution/list?min=1&max=10&state=0" role="tab"><span>전체</span></a>
+                    <li class="nav-item show" onclick="location.href='/solution/list?min=1&max=10&state=0'">
+                        <a class="nav-link active" data-toggle="tab" role="tab"><span>전체</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="/solution/list?min=1&max=10&state=1" role="tab"><span>답변완료</span></a>
+                    <li class="nav-item" onclick="location.href='/solution/list?min=1&max=10&state=4'">
+                        <a class="nav-link" data-toggle="tab" role="tab"><span>답변완료</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="/solution/list?min=1&max=10&state=2" role="tab"><span>답변대기중</span></a>
+                    <li class="nav-item" onclick="location.href='/solution/list?min=1&max=10&state=1'">
+                        <a class="nav-link" data-toggle="tab" role="tab"><span>답변대기중</span></a>
                     </li>
                 </ul>
             </div>
