--- a/src/main/resources/templates/solution/list.html
+++ b/src/main/resources/templates/solution/list.html
@@ -51,7 +51,7 @@
                   <div class="tt-desktop-menu">
                     <nav>
                         <ul>
-                            <li><a href="/pg/submit"><span>등록</span></a></li>
+                           <li><a href="/solution/submit"><span>등록</span></a></li>
                           	<li><a href="/solution/list?min=1&max=10&state=0" ><span>목록</span></a></li>
                             <li><a href="/pg/myAnswer"><span>내 답변</span></a></li>
                             <li><a href="/pg/help"><span>이용방법</span></a></li>
@@ -117,8 +117,8 @@
                                 </div>
                             </div>
                             <div class="tt-col-category tt-col-value-large hide-mobile">
-                              <span class="tt-color07 tt-badge" th:if="${list.state == 4}">답변완료</span>
-                              <span class="tt-color04 tt-badge" th:unless="${list.state == 4}">풀이대기</span>
+                              <span class="tt-color07 tt-badge" th:if="${list.state == 4}" th:text="${list.state.name}">답변완료</span>
+                              <span class="tt-color04 tt-badge" th:unless="${list.state == 4}" th:text="${list.state.name}">답변대기</span>
                             </div>
                             <div class="tt-col-category tt-col-value-large hide-mobile">
                               <span class="tt-color07 tt-badge" th:if="${list.review != null}">후기등록</span>
