submit.html 이름수정 -> apply.html

--- a/src/main/resources/templates/solution/apply.html
+++ b/src/main/resources/templates/solution/apply.html
@@ -49,7 +49,7 @@
                   <div class="tt-desktop-menu">
                     <nav>
                         <ul>
-                           	<li><a href="/solution/submit"><span>등록</span></a></li>
+                           	<li><a href="/solution/apply"><span>등록</span></a></li>
                           	<li><a href="/solution/list?min=1&max=10&state=0" ><span>목록</span></a></li>
                             <li><a href="/pg/myAnswer"><span>내 답변</span></a></li>
                             <li><a href="/pg/help"><span>이용방법</span></a></li>
@@ -271,7 +271,7 @@
     var object = {
       "title" : null,
       "subject" : null,
-      "problem" : [],
+      "problems" : [],
       "isNew" : false,
       "isDetail" : false,
       "language" : null,
