--- a/src/main/resources/templates/solution/list.html
+++ b/src/main/resources/templates/solution/list.html
@@ -51,7 +51,7 @@
                   <div class="tt-desktop-menu">
                     <nav>
                         <ul>
-                           <li><a href="/solution/submit"><span>등록</span></a></li>
+                           <li><a href="/solution/apply"><span>등록</span></a></li>
                           	<li><a href="/solution/list?min=1&max=10&state=0" ><span>목록</span></a></li>
                             <li><a href="/pg/myAnswer"><span>내 답변</span></a></li>
                             <li><a href="/pg/help"><span>이용방법</span></a></li>
